* cleanup * reanimate openapi-spec * finish migration to java